--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   flutter_signin_button: ^2.0.0
   firebase_messaging: ^14.6.7
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -69,8 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - imgs/
-    - imgs/books/
+    - assets/images/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
